# test_202207

./: .coveragerc  LICENSE  README.md  build_docs_sphinx.bash  setup.cfg
.github/workflows/: github-actions-demo.yml
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/util_bashscript/: strip_extra_newline_in_table.bash
tests/: test_util.py
ttt/: __main__.py  __metadata__.py  util.py
