[metadata]
name = ttt
version = attr: ttt.__version__.__version__
description = This is ttt package.
long_description = file: README.rst
author = yu_satou
author_email = yu_satou@ftr.co.jp
url = None
license = MIT

[options]
install_requires =
    wheel
    numpy
setup_requires =
    pytest_runner
    pytest_cov
    sphinx
    sphinx-rtd-theme
    mecab-python3  # for searching jp wards in sphinx.
    unidic-lite  # for searching jp wards in sphinx.
tests_require = pytest
packages = find:
command_options = build_sphinx

[options.packages.find]
exclude =
    docs
    tests
    examples

# # From my_deepl_translate.
# # If you want to make this app cli-enabled, comment out follows.
# [options.entry_points]
# # Means *M* y *D* eep *L* *T* ranslate -> mdlt.
# console_scripts =
#     mdlt = my_deepl_translate:my_deepl_translate.my_deepl_translate_for_command

[aliases]
test = pytest

[tool:pytest]
addopts = -v --cov ttt --cov-report html --cov-config .coveragerc
python_files = tests/test_*.py
norecursedirs =
    .git
    .eggs
    .venv
    .pytest_cache
    htmlcov
    ttt
    ttt.egg-info
    examples
    docs

[build_sphinx]
source-dir = docs/sphinx/source
build-dir = docs/sphinx/build
